[gd_scene load_steps=8 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://Caves/cave_tilemap.tres" type="TileSet" id=4]
[ext_resource path="res://Enemies/golem_sleep.png" type="Texture" id=5]
[ext_resource path="res://Enemies/golem_sapphire_sleep.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 264.0
margin_bottom = 152.0
color = Color( 0.258824, 0.129412, 0.211765, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 1, 0, 15, 0, 0, 65536, 0, 0, 65537, 12, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 14, 0, 65542, 14, 0, 65543, 14, 0, 65544, 14, 0, 65545, 14, 0, 65546, 14, 0, 65547, 0, 0, 65548, 10, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 1, 0, 131077, 14, 0, 131078, 14, 0, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 7, 0, 196608, 0, 0, 196609, 0, 0, 196610, 4, 0, 196611, 0, 0, 196612, 0, 0, 196613, 14, 0, 196614, 14, 0, 196615, 14, 0, 196616, 14, 0, 196617, 14, 0, 196618, 14, 0, 196619, 2, 0, 196620, 0, 0, 196621, 0, 0, 196622, 5, 0, 196623, 0, 0, 262144, 11, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 14, 0, 262153, 14, 0, 262154, 14, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 14, 0, 327686, 14, 0, 327687, 14, 0, 327688, 14, 0, 327689, 14, 0, 327690, 14, 0, 327691, 0, 0, 327692, 3, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 14, 0, 393222, 14, 0, 393223, 14, 0, 393224, 14, 0, 393225, 14, 0, 393226, 14, 0, 393227, 0, 0, 393228, 0, 0, 393229, 9, 0, 393230, 0, 0, 393231, 8, 0, 458752, 0, 0, 458753, 6, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 14, 0, 458758, 14, 0, 458759, 14, 0, 458760, 14, 0, 458761, 14, 0, 458762, 14, 0, 458763, 13, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 5, 0, 524292, 0, 0, 524293, 14, 0, 524294, 14, 0, 524295, 14, 0, 524296, 14, 0, 524297, 14, 0, 524298, 14, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 13, 0, 524303, 13, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 104, 56 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 152, 56 )
texture = ExtResource( 6 )
flip_h = true

[node name="Title" type="Label" parent="."]
margin_left = 64.0
margin_top = 12.0
margin_right = 192.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1

[node name="LoginButton" type="Button" parent="."]
margin_left = 185.0
margin_top = 118.0
margin_right = 249.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 18 )
focus_neighbour_top = NodePath("../Menu/LeaderboardsButton")
theme = ExtResource( 3 )
text = "Sign In"

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 64.0
margin_right = 176.0
margin_bottom = 134.0
theme = ExtResource( 3 )
custom_constants/separation = 4
alignment = 1

[node name="PlayButton" type="Button" parent="Menu"]
margin_top = 4.0
margin_right = 96.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 18 )
focus_neighbour_bottom = NodePath("../ChallengeButton")
text = "Play"

[node name="ChallengeButton" type="Button" parent="Menu"]
margin_top = 26.0
margin_right = 96.0
margin_bottom = 44.0
rect_min_size = Vector2( 88, 18 )
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../LeaderboardsButton")
text = "Challenge"

[node name="LeaderboardsButton" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 96.0
margin_bottom = 66.0
rect_min_size = Vector2( 80, 18 )
focus_neighbour_top = NodePath("../ChallengeButton")
focus_neighbour_bottom = NodePath("../../LoginButton")
text = "Leaderboards"

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
[connection signal="pressed" from="Menu/LeaderboardsButton" to="." method="_on_LeaderboardsButton_pressed"]
